src/test/contracts/negative/linearity.mligo
type foofoo = {foo : string; foo : int}